# NapoleonAI

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: publish_test_pypi.yml
assets/trainingdata/: rakuten_category_map  rakuten_test_sample.csv  rakuten_train_sample.csv  some_sample.csv
cli/: cli.py
common/: categorymapping.py  validation_functions.py
configuration/: get_configuration.py  imageclassification.yml  multimodalclassification.yml  textclassification.yml
confs/: descriptionclassification_doc2vec.yml  descriptionclassification_embeddingsize.yml  multimodal_title.yml  title_description.yml  title_description_image.yml
controller/: create_model.py  image_model.py  multimodal_model.py  text_model.py
docs/: .buildinfo  configuration.html  controller.html  demo.html  documentation.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/.doctrees/: configuration.doctree  controller.doctree  demo.doctree  documentation.doctree  environment.pickle  index.doctree  usage.doctree
docs/_sources/: configuration.rst.txt  controller.rst.txt  documentation.rst.txt  index.rst.txt  usage.rst.txt
experiments/: doc2vec.py  multimodal.py  rnn_word_embeddings.py  simple_rnn.py
imageclassification/: create_models.py  feature_extraction.py  image_models_dictionary.py  image_types.py  train_models.py
multimodalclassification/dataprocessing/: datasetgeneration.py
multimodalclassification/model/: model.py
source/: conf.py  demo.rst  documentation.rst  index.rst  requirements.txt  usage.rst
src/napoleonai/: settings.py
src/napoleonai/cli/: cli.py  configuration.py
src/napoleonai/common/: stem_function.py
src/napoleonai/configuration/: imageclassification.yml  multimodalclassification.yml  textclassification.yml  textclassification_amazon.yml  textclassificationdoc2vec.yml
src/napoleonai/controller/: create_model.py  image_model.py  multimodal_model.py  text_model.py
src/napoleonai/experiments/: doc2vec.py  multimodal.py  rnn_word_embeddings.py  simple_rnn.py
src/napoleonai/imageclassification/: create_models.py  image_types.py  (+4 more)
textclassification/common/: classifier.py  common_types.py  datapreprocessing.py  datasetgeneration.py  featureextraction.py  wordembeddings.py
textclassification/testing/: test_word_embeddings.py
(+14 files in other folders)
